// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutomatedChecksView renders when status scan <Completed> 1`] = `
<div
  className="automatedChecksView"
  data-automation-id="automated-checks-view"
>
  <TitleBar
    deps={
      Object {
        "getCardSelectionViewData": [Function],
        "getCardsViewData": [Function],
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "deviceActions": undefined,
          "scanActions": undefined,
        },
        "screenshotViewModelProvider": [Function],
      }
    }
    pageTitle="Automated checks"
  />
  <div
    className="automatedChecksPanelLayout"
  >
    <div
      className="mainContentWrapper"
    >
      <CommandBar
        cardsViewData={
          Object {
            "cards": Object {
              "fail": Array [
                Object {
                  "id": "test-fail-id",
                },
              ],
            },
          }
        }
        deps={
          Object {
            "getCardSelectionViewData": [Function],
            "getCardsViewData": [Function],
            "scanActionCreator": proxy {
              "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
              "deviceActions": undefined,
              "scanActions": undefined,
            },
            "screenshotViewModelProvider": [Function],
          }
        }
        deviceStoreData={Object {}}
        scanMetaData={
          Object {
            "scanTargetData": Object {
              "name": "test-target-app-name",
            },
            "timestamp": "test timestamp",
            "toolData": Object {
              "applicationProperties": Object {
                "name": "some app",
              },
            },
          }
        }
        scanStoreData={
          Object {
            "status": 2,
          }
        }
      />
      <main>
        <HeaderSection />
        <CardsView
          cardsViewData={
            Object {
              "cards": Object {
                "fail": Array [
                  Object {
                    "id": "test-fail-id",
                  },
                ],
              },
            }
          }
          deps={
            Object {
              "getCardSelectionViewData": [Function],
              "getCardsViewData": [Function],
              "scanActionCreator": proxy {
                "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
                "deviceActions": undefined,
                "scanActions": undefined,
              },
              "screenshotViewModelProvider": [Function],
            }
          }
          targetAppInfo={
            Object {
              "name": "test-target-app-name",
            }
          }
          userConfigurationStoreData={
            Object {
              "isFirstTime": false,
            }
          }
        />
      </main>
    </div>
    <ScreenshotView
      viewModel={
        Object {
          "screenshotData": Object {
            "base64PngData": "this should appear in snapshotted ScreenshotView props",
          },
        }
      }
    />
  </div>
  <SettingsPanel
    deps={
      Object {
        "getCardSelectionViewData": [Function],
        "getCardsViewData": [Function],
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "deviceActions": undefined,
          "scanActions": undefined,
        },
        "screenshotViewModelProvider": [Function],
      }
    }
    featureFlagData={Object {}}
    layerClassName="settingsPanelLayerHost"
    userConfigStoreState={
      Object {
        "isFirstTime": false,
      }
    }
  />
</div>
`;

exports[`AutomatedChecksView renders when status scan <Failed> 1`] = `
<div
  className="automatedChecksView"
  data-automation-id="automated-checks-view"
>
  <TitleBar
    deps={
      Object {
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "deviceActions": undefined,
          "scanActions": undefined,
        },
        "windowStateActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "windowFrameActionCreator": undefined,
          "windowStateActions": undefined,
        },
      }
    }
    pageTitle="Automated checks"
    windowStateStoreData="window state store data"
  />
  <div
    className="automatedChecksPanelLayout"
  >
    <div
      className="mainContentWrapper"
    >
      <CommandBar
        cardsViewData={null}
        deps={
          Object {
            "scanActionCreator": proxy {
              "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
              "deviceActions": undefined,
              "scanActions": undefined,
            },
            "windowStateActionCreator": proxy {
              "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
              "windowFrameActionCreator": undefined,
              "windowStateActions": undefined,
            },
          }
        }
        deviceStoreData={
          Object {
            "connectedDevice": "TEST DEVICE",
          }
        }
        scanMetaData={null}
        scanStoreData={
          Object {
            "status": 3,
          }
        }
      />
      <main>
        <HeaderSection />
        <DeviceDisconnectedPopup
          deviceName="TEST DEVICE"
          onConnectNewDevice={[Function]}
          onRescanDevice={[Function]}
        />
      </main>
    </div>
  </div>
  <SettingsPanel
    deps={
      Object {
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "deviceActions": undefined,
          "scanActions": undefined,
        },
        "windowStateActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "windowFrameActionCreator": undefined,
          "windowStateActions": undefined,
        },
      }
    }
    featureFlagData={Object {}}
    isOpen={false}
    layerClassName="settingsPanelLayerHost"
  />
</div>
`;

exports[`AutomatedChecksView renders when status scan <Scanning> 1`] = `
<div
  className="automatedChecksView"
  data-automation-id="automated-checks-view"
>
  <TitleBar
    deps={
      Object {
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "deviceActions": undefined,
          "scanActions": undefined,
        },
        "windowStateActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "windowFrameActionCreator": undefined,
          "windowStateActions": undefined,
        },
      }
    }
    pageTitle="Automated checks"
    windowStateStoreData="window state store data"
  />
  <div
    className="automatedChecksPanelLayout"
  >
    <div
      className="mainContentWrapper"
    >
      <CommandBar
        cardsViewData={null}
        deps={
          Object {
            "scanActionCreator": proxy {
              "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
              "deviceActions": undefined,
              "scanActions": undefined,
            },
            "windowStateActionCreator": proxy {
              "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
              "windowFrameActionCreator": undefined,
              "windowStateActions": undefined,
            },
          }
        }
        deviceStoreData={
          Object {
            "connectedDevice": "TEST DEVICE",
          }
        }
        scanMetaData={null}
        scanStoreData={
          Object {
            "status": 1,
          }
        }
      />
      <main>
        <HeaderSection />
        <ScanningSpinner
          aria-live="assertive"
          isSpinning={true}
          label="Scanning..."
        />
      </main>
    </div>
  </div>
  <SettingsPanel
    deps={
      Object {
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "deviceActions": undefined,
          "scanActions": undefined,
        },
        "windowStateActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "windowFrameActionCreator": undefined,
          "windowStateActions": undefined,
        },
      }
    }
    featureFlagData={Object {}}
    isOpen={false}
    layerClassName="settingsPanelLayerHost"
  />
</div>
`;

exports[`AutomatedChecksView renders when status scan <undefined> 1`] = `
<div
  className="automatedChecksView"
  data-automation-id="automated-checks-view"
>
  <TitleBar
    deps={
      Object {
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "deviceActions": undefined,
          "scanActions": undefined,
        },
        "windowStateActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "windowFrameActionCreator": undefined,
          "windowStateActions": undefined,
        },
      }
    }
    pageTitle="Automated checks"
    windowStateStoreData="window state store data"
  />
  <div
    className="automatedChecksPanelLayout"
  >
    <div
      className="mainContentWrapper"
    >
      <CommandBar
        cardsViewData={null}
        deps={
          Object {
            "scanActionCreator": proxy {
              "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
              "deviceActions": undefined,
              "scanActions": undefined,
            },
            "windowStateActionCreator": proxy {
              "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
              "windowFrameActionCreator": undefined,
              "windowStateActions": undefined,
            },
          }
        }
        deviceStoreData={
          Object {
            "connectedDevice": "TEST DEVICE",
          }
        }
        scanMetaData={null}
        scanStoreData={
          Object {
            "status": undefined,
          }
        }
      />
      <main>
        <HeaderSection />
        <ScanningSpinner
          aria-live="assertive"
          isSpinning={false}
          label="Scanning..."
        />
      </main>
    </div>
  </div>
  <SettingsPanel
    deps={
      Object {
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "deviceActions": undefined,
          "scanActions": undefined,
        },
        "windowStateActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "windowFrameActionCreator": undefined,
          "windowStateActions": undefined,
        },
      }
    }
    featureFlagData={Object {}}
    isOpen={false}
    layerClassName="settingsPanelLayerHost"
  />
</div>
`;
